--- a/basetools/build.gradle
+++ b/basetools/build.gradle
@@ -40,7 +40,8 @@ publish {
     userOrg = 'knight'//bintray.com用户名
     groupId = 'com.knight'//jcenter上的路径
     artifactId = 'basetools'//项目名称
-    publishVersion = '1.0.1'//版本号
+    publishVersion = '1.0.5'//版本号
+
     desc = 'this is a tools'//描述，不重要
 //    publications = 'maven' //  用于上传的publication名称列表。 默认值为['maven']，这是这个插件为你创建的一个publication。
     website = 'https://github.com/296777513/Common'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
@@ -48,3 +49,17 @@ publish {
     bintrayUser = '296777513' // 用于上传的用户名。
     dryRun = 'false' // 如果设置为“true”，则将运行所有内容，但不会将包上传到bintray。 如果“false”，那么它将正常上传。
 }
+
+/**
+ * 如果没有这段代码，将不支持中文注释
+ */
+allprojects {
+    tasks.withType(Javadoc) {
+        options {
+            encoding "UTF-8"
+            charSet 'UTF-8'
+            links "http://docs.oracle.com/javase/7/docs/api"
+        }
+    }
+}
+
