--- a/basetools/build.gradle
+++ b/basetools/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'//添加
 apply plugin: 'maven'
+apply plugin: 'com.jakewharton.hugo'
+apply plugin: 'android-aspectjx'
 
 android {
     compileSdkVersion 26
@@ -30,6 +32,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
+
+    compile 'org.aspectj:aspectjrt:1.8.10'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
