--- a/aop/build.gradle
+++ b/aop/build.gradle
@@ -1,14 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.hugo'
-apply plugin: 'me.ele.lancet'
+//apply plugin: 'me.ele.lancet'
 apply plugin: 'android-aspectjx'
 
 
 android {
-    compileSdkVersion 26
-
-
-
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.knight.aop"
         minSdkVersion 21
@@ -19,32 +16,21 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    buildToolsVersion '28.0.1'
 }
 
 dependencies {
-
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
-    provided 'me.ele:lancet-base:1.0.2'
-
-    compile 'org.aspectj:aspectjrt:1.8.10'
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.appcompat:appcompat:1.0.0-rc01'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+//    provided 'me.ele:lancet-base:1.0.4'
+//    implementation 'org.aspectj:aspectjrt:1.8.13'
     implementation project(':basetools')
 }
 //
