--- a/basetools/build.gradle
+++ b/basetools/build.gradle
@@ -1,17 +1,18 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'//添加
-apply plugin: 'maven'
-apply plugin: 'com.jakewharton.hugo'
-apply plugin: 'android-aspectjx'
+apply plugin: 'kotlin-android'
+//apply plugin: 'com.jakewharton.hugo'
+//apply plugin: 'android-aspectjx'
+apply from: file('../uploade.gradle')
+
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.1'
 
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
 
@@ -26,45 +27,26 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+            java.srcDirs += "src/main/kotlin"
+        }
+    }
+
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-
-    compile 'org.aspectj:aspectjrt:1.8.10'
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'org.aspectj:aspectjrt:1.8.9'
+    implementation 'androidx.appcompat:appcompat:1.0.0-rc01'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.60'
 }
 
-//添加
-publish {
-    userOrg = 'knight'//bintray.com用户名
-    groupId = 'com.knight'//jcenter上的路径
-    artifactId = 'basetools'//项目名称
-    publishVersion = '1.0.5'//版本号
-
-    desc = 'this is a tools'//描述，不重要
-//    publications = 'maven' //  用于上传的publication名称列表。 默认值为['maven']，这是这个插件为你创建的一个publication。
-    website = 'https://github.com/296777513/Common'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
-    bintrayKey = '0e35550c9145602f043f4cb98f2a12b9a6bbb98f'
-    bintrayUser = '296777513' // 用于上传的用户名。
-    dryRun = 'false' // 如果设置为“true”，则将运行所有内容，但不会将包上传到bintray。 如果“false”，那么它将正常上传。
-}
-
-/**
- * 如果没有这段代码，将不支持中文注释
- */
-allprojects {
-    tasks.withType(Javadoc) {
-        options {
-            encoding "UTF-8"
-            charSet 'UTF-8'
-            links "http://docs.oracle.com/javase/7/docs/api"
-        }
-    }
-}
+//repositories {
+//    mavenCentral()
+//}
 
