--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,12 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'com.novoda:bintray-release:0.5.0'
+        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.novoda:bintray-release:+'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
-        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:1.0.10'
-        classpath 'me.ele:lancet-plugin:1.0.2'
+        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.0'
+        classpath 'me.ele:lancet-plugin:1.0.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -29,3 +30,6 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
+//kotlin类库上传
+//非常重要 要不它不认识你的项目.kt文件名 其中airpurgeview是你的library名
+tasks.getByPath(":basetools:releaseAndroidJavadocs").enabled = false
