--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
-        classpath 'com.novoda:bintray-release:+'
+        classpath 'com.novoda:bintray-release:0.8.1'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
         classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.0'
         classpath 'me.ele:lancet-plugin:1.0.4'
@@ -24,7 +24,9 @@ allprojects {
         jcenter()
         google()
     }
+
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
@@ -33,3 +35,4 @@ task clean(type: Delete) {
 //kotlin类库上传
 //非常重要 要不它不认识你的项目.kt文件名 其中airpurgeview是你的library名
 tasks.getByPath(":basetools:releaseAndroidJavadocs").enabled = false
+
