--- a/basetools/build.gradle
+++ b/basetools/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 //apply plugin: 'com.jakewharton.hugo'
 //apply plugin: 'android-aspectjx'
 //getDataFromGradle("SOURCE_DEPENDECY")
@@ -40,13 +41,25 @@ android {
         abortOnError false
     }
 
+    kapt {
+        generateStubs = true//将第三方库先生成class在用kotlin注解(glide)
+    }
+
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'org.aspectj:aspectjrt:1.8.9'
-    implementation 'androidx.appcompat:appcompat:1.0.0-rc01'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.60'
+    implementation("org.aspectj:aspectjrt:1.8.9")
+    implementation 'androidx.appcompat:appcompat:1.0.0-rc02'
+//    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.61'
+    implementation "org.jetbrains.anko:anko:$anko_version"
+    api 'com.github.bumptech.glide:glide:4.8.0'
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'jp.wasabeef:glide-transformations:3.3.0'
+    // If you want to use the GPU Filters
+    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-rc02'
 }
 
 
