--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.anko_version = '0.10.5'
     repositories {
         mavenCentral()
         jcenter()
